# my_package

./: .gitignore  README.md  setup.cfg  setup.py
src/my_package/: example.py
