[metadata]
# This is required for any package to install with a name
name = mypackage

# If you want to publish on PyPI then the following are also required
# url = 
author = Stefanie Mak
author_email = mak@dynamic-biosensors.com

# This is useful but not required
# version =
description = This is a test project

long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM


[options]
package_dir=
    =src
packages=find:


[options.packages.find]
where = src



